--- a/package.json
+++ b/package.json
@@ -2,16 +2,13 @@
     "name": "widget",
     "version": "0.9.16",
     "dependencies": {
-        "$":"jquery/1.7.2/jquery",
-        "handlebars":"handlebars/1.0.0/handlebars",
-        "base": "base/0.9.16/base"
+        "$": "jquery/1.7.2/jquery",
+        "handlebars": "1.0.0",
+        "base": "0.9.16"
     },
-    'output': {
-        'widget.js': 'default',
-        'auto-render.js': 'default',
-        'daparser.js': 'default',
-        'templatable.js': 'default',
-        'ast-printer.js': 'default'
+    "output": {
+        "widget.js": ".",
+        "templatable.js": "."
     },
     "tests": ["daparser", "widget", "templatable"]
 }
