--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "widget",
-  "version": "1.0.0",
+  "version": "1.1.0-dev",
   "dependencies": {
     "$": "$",
     "handlebars": "1.0.0",
