--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "widget",
-  "version": "1.1.0-dev",
+  "version": "1.0.2",
   "dependencies": {
     "$": "$",
     "handlebars": "1.0.0",
-    "base": "1.0.0"
+    "base": "1.0.1"
   },
   "output": {
     "widget.js": ".",
