--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,12 @@ node_js:
   - 0.8
 
 install:
-  - npm install node-static mocha-phantomjs
-  - npm install nico@ninja
+  - npm install mocha-browser nico
 
 before_script:
-  - git clone -b new-nico git://github.com/aralejs/nico-arale.git _theme
+  - git clone git://github.com/aralejs/nico-arale.git _theme
   - node_modules/.bin/nico build --theme _theme -C _theme/nico.js
 
 script:
-  - node _theme/server.js _site node_modules/.bin/mocha-phantomjs http://127.0.0.1:8000/tests/runner.html
-  - node _theme/server.js _site node_modules/.bin/mocha-phantomjs http://127.0.0.1:8000/tests/runner.html?src
+  - node_modules/.bin/mocha-browser _site/tests/runner.html -S
+
