--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,7 @@ before_script:
 script:
   - node_modules/.bin/mocha-browser _site/tests/runner.html -S
 
+after_success:
+  - npm install jscoverage coveralls
+  - node_modules/.bin/jscoverage --encoding=utf8 src _site/src-cov
+  - node_modules/.bin/mocha-browser _site/tests/runner.html?cov -S -R lcov | node_modules/.bin/coveralls
