--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-    "family": "arale",
-    "name": "widget",
-    "version": "1.1.1",
+    "name": "arale-widget",
+    "version": "1.2.0",
     "description": "Widget 是 UI 组件的基础类，约定了组件的基本生命周期，实现了一些通用功能。基于 Widget 可以构建出任何你想要的 Web 界面组件。",
     "keywords": ["infrastructure", "ui"],
     "homepage": "http://aralejs.org/widget/",
@@ -18,10 +17,14 @@
         "url": "https://github.com/aralejs/widget/issues"
     },
     "spm": {
-        "alias": {
-            "$": "$",
-            "base": "arale/base/1.1.1/base"
+        "dependencies": {
+            "jquery": "1.7.2",
+            "arale-base": "1.2.0"
         },
-        "output": ["widget.js"]
+        "devDependencies": {
+            "expect.js": "0.3.1",
+            "sinon": "1.6.0"
+        },
+        "main": "widget.js"
     }
 }
